git HEAD

    * Add progressbar, introduces new dependency Time::Progress
    * Switch from lightbox to shadowbox <http://www.shadowbox-js.com/>
    * Show filename in lightbox

dthumb 0.1 - Sun Feb 27 2011

    * Support for jpg/png with Image::Imlib2
    * Includes Javascript lightbox
    * Some configuration via commandline arguments