@@ -2,8 +2,9 @@
 	"http://www.w3.org/TR/xhtml11/DTD/xhtml11.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en">
 <head>
-	<title>dthumb</title>
+	<title><!-- $title --></title>
 	<meta http-equiv="Content-Type" content="text/html;charset=utf-8"/>
+	<link rel="stylesheet" type="text/css" href=".dthumb/main.css"/>
 	<link rel="stylesheet" type="text/css" href=".dthumb/shadowbox.css"/>
 	<script type="text/javascript" src=".dthumb/shadowbox.js"></script>
 	<script type="text/javascript">
