@@ -1,0 +1,11 @@
+div.image-container {
+	text-align: center;
+	font-size: 80%;
+	float: left;
+	width: /* $width */;
+	height: /* $height */;
+}
+
+div.image-container a {
+	text-decoration: none;
+}
